@@ -14,10 +14,11 @@ define("_SR_SHOWALLR","Show all results");
 define("_SR_NEXT","Next");
 define("_SR_PREVIOUS","Previous");
 define("_SR_KEYWORDS","Keyword(s)");
-define("_SR_TYPE","Type");
+define("_SR_TYPE","Search Type");
 define("_SR_SEARCHIN","Search in");
 define('_SR_KEYTOOSHORT', 'Keywords must be at least <b>%s</b> characters long');
 define('_SR_KEYIGNORE', 'Keywords shorter than <b>%s</b> characters will be ignored');
 define('_SR_SEARCHRULE', 'Search Rule');
 define('_SR_IGNOREDWORDS', 'The following words are shorter than allowed minimum length (%u chars) and were not included in your search:');
+define('_SR_HITSRETURNED', 'hit(s) returned');
 ?>
