@@ -1,31 +1,24 @@
 <{if $basic_search == false }>
-<strong>Search Type:</strong> <{$search_type}><br />
-<strong>Keywords: </strong>
-		<{* This section generates a space separated list of keywords that were searched. *}>
-		<{section name=cur_kw_searched loop=$searched_keywords}>
-		  	<{$searched_keywords[cur_kw_searched]}><{if $smarty.section.cur_kw_searched.index <> $smarty.section.cur_kw_searched.total}>&nbsp;<{/if}>
-		<{/section}>
-<br /><br />
 <table cellpadding="0" cellspacing="0" width="100%" height="33" border="0">
  <tr height="33">
-  <td width="3"><img src="images/search/header.<{$smarty.const._GLOBAL_LEFT}>.gif" /></td>
+  <td style="width:3px; background-image: url(images/search/header.<{$smarty.const._GLOBAL_LEFT}>.gif);"></td>
   <td style="background-image: url(images/search/header.background.gif); vertical-align: middle">
    <table cellpadding="0" cellspacing="0" border="0">
     <tr>
-     <td colspan="2" style="font-family: sans-serif; font-size: large; font-weight: bold; padding-<{$smarty.const._GLOBAL_LEFT}>: 3px;"><{$label_search_results}>: <{$showing}></td>
+     <td colspan="2" style="font-family: sans-serif; font-weight: bold; padding-<{$smarty.const._GLOBAL_LEFT}>: 3px;"><{$label_search_results}>: <{$showing}></td>
     </tr>
    </table>
   </td>
-  <td width="3"><img src="images/search/header.<{$smarty.const._GLOBAL_RIGHT}>.gif" /></td>
+  <td style="width:3px; background-image: url(images/search/header.<{$smarty.const._GLOBAL_RIGHT}>.gif);"></td>
  </tr>
 </table>
 
 <table cellpadding="0" cellspacing="0" width="100%" border="0">
 <{foreach from=$module_sort_order key=sort_key item=sort_value}>
 <tr>
- <td><img src="images/search/bodyHeader.<{$smarty.const._GLOBAL_LEFT}>.gif" /></td>
+ <td style="background-image: url(images/search/bodyHeader.<{$smarty.const._GLOBAL_LEFT}>.gif);"></td>
  <td style="background-image: url(images/search/bodyHeader.background.gif);">
- 	<div style="font-size: large; padding-top: 5px; padding-bottom: 5px;"><b><{$sort_key}></b>: (<{$sort_value}> hit(s) returned)</div>
+ 	<div style="padding-top: 5px; padding-bottom: 5px;"><b><{$sort_key}></b>: (<{$sort_value}> <{$smarty.const._SR_HITSRETURNED}>)</div>
 	<{if $search_results[$sort_key].search_more_url != ''}>
 	  <div style="padding-bottom: 5px;"><a href="<{$search_results[$sort_key].search_more_url}>"><img src="images/search/search.more_results.gif" alt="<{$search_results[$sort_key].search_more_title}>" /></a></div>
 	<{/if}>
@@ -33,7 +26,7 @@
 		<div style="padding-bottom: 5px; text-align: <{$smarty.const._GLOBAL_RIGHT}>"><{$search_results[$sort_key].page_nav}></div>
 	<{/if}>
  </td>
- <td><img src="images/search/bodyHeader.<{$smarty.const._GLOBAL_RIGHT}>.gif" /></td>
+ <td style="background-image: url(images/search/bodyHeader.<{$smarty.const._GLOBAL_RIGHT}>.gif);"></td>
 </tr>
 <tr style="background-color: #FDFDFD;">
  <td width="16" style="background-image: url(images/search/body.<{$smarty.const._GLOBAL_LEFT}>.gif)"></td>
@@ -60,19 +53,24 @@
 <{/foreach}>
 
     <tr>
-     <td><img src="images/search/footer.<{$smarty.const._GLOBAL_LEFT}>.gif" /></td>
-     <td style="background-image: url(images/search/footer.background.gif);"></td>
-     <td><img src="images/search/footer.<{$smarty.const._GLOBAL_RIGHT}>.gif" /></td>
+     <td style="height:9px; background-image: url(images/search/footer.<{$smarty.const._GLOBAL_LEFT}>.gif);"></td>
+     <td style="height:9px; background-image: url(images/search/footer.background.gif);"></td>
+     <td style="height:9px; background-image: url(images/search/footer.<{$smarty.const._GLOBAL_RIGHT}>.gif);"></td>
     </tr>
-</table>
-<br /><br />
-<{$label_ignored_keywords}>&nbsp;
+</table><br />
+<strong><{$label_search_type}> </strong><{$search_type}><br />
+<strong><{$label_keywords}> </strong>
+	<{* This section generates a space separated list of keywords that were searched. *}>
+	<{section name=cur_kw_searched loop=$searched_keywords}>
+	  	<{$searched_keywords[cur_kw_searched]}><{if $smarty.section.cur_kw_searched.index <> $smarty.section.cur_kw_searched.total}>&nbsp;<{/if}>
+	<{/section}><br />
+<{if $ignored_keywords}><{$label_ignored_keywords}>
 	<strong>
 	<{* This section generates a space separated list of keywords that were NOT searched. *}>
-     <{section name=cur_kw_not_searched loop=$ignored_keywords}>
+	<{section name=cur_kw_not_searched loop=$ignored_keywords}>
 	  	<{$ignored_keywords[cur_kw_not_searched]}><{if $smarty.section.cur_kw_not_searched.index <> $smarty.section.cur_kw_not_searched.total}>&nbsp;<{/if}>
 	<{/section}>
-	</strong>
-<br /><br />
+	</strong><br />
+<{/if}><br />
 <{/if}>
 <{$search_form}>
