@@ -27,6 +27,7 @@ Revision:
 * #660: corrected typo in class/uploader.php (Phoenyx)
 * #659: image manager now creates index.html for new categories (Phoenyx)
 * #250: password is now marked as required in the user form | ticket from addons (Phoenyx)
+* #614: moved wording from search template to language file and reworked search results (Phoenyx)
 
 ===2009-06-20 : 1.2 Alpha 2.1 ===
 '''Fixed'''
